--- a/build.gradle
+++ b/build.gradle
@@ -40,9 +40,9 @@ sourceCompatibility = 1.8
 task wsimport {
     ext.destDir = file("${projectDir}/src/main/java")
     System.setProperty('javax.net.ssl.keyStoreType', 'pkcs12')
-	System.setProperty('javax.net.ssl.keyStore', 'tw_keystore_prod.pfx')
+	System.setProperty('javax.net.ssl.keyStore', 'assets/tw_keystore_prod.pfx')
 	System.setProperty('javax.net.ssl.keyStorePassword', 'datacert')
-	System.setProperty('javax.net.ssl.trustStore', 'tw_truststore_prod.jks')
+	System.setProperty('javax.net.ssl.trustStore', 'assets/tw_truststore_prod.jks')
 	System.setProperty('javax.net.ssl.trustStorePassword', 'datacert')
     doLast {
         ant {
@@ -58,7 +58,7 @@ task wsimport {
                     extension: "true",
                     verbose: "false",
                     quiet: "false",
-                    package: "com.datacert.ebilling.digsig.api.trustweaver",
+                    package: "com.wk.elms.ebilling.digsig.api.trustweaver",
                     xnocompile: "true",
                     wsdl: 'https://tseiod.trustweaver.com/ts/svs.asmx?wsdl') {
                 xjcarg(value: "-XautoNameResolution")
@@ -70,7 +70,7 @@ task wsimport {
 compileJava.dependsOn wsimport
 
 bootRepackage {
-	mainClass = 'com.datacert.ebilling.digsig.api.DigitalSignatureServiceApplication'
+	mainClass = 'com.wk.elms.ebilling.digsig.api.DigitalSignatureServiceApplication'
 }
 
 task dist(type: Copy, dependsOn: bootRepackage) {
