--- a/build.gradle
+++ b/build.gradle
@@ -145,6 +145,7 @@ dependencies {
 
 	testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 	testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: "${springBootVersion}"
+	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 
 
 /*
