--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,8 @@ stages:
       demands:
       - Agent.Name -equals cp-build
     steps:
-    - task: CmdLine@2
-#      continueOnError: true
-      inputs:
-        script: cp /root/.embedmongo/gradlew .
-    - script: 'chmod -R 777 /azp/_work/1/s/build'
+    - script: 'cp /root/.embedmongo/gradlew .'
+    - script: 'chmod -R 777 /azp/_work/1/s'
     - task: Gradle@2
       inputs:
         gradleWrapperFile: 'gradlew'
