updated legacy endpoint to confer to accepted parameter types fixed tests for the new endpoints added rolling appender

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,8 @@ bootJar {
 	mainClassName = 'com.wkelms.ebilling.digsig.api.DigitalSignatureServiceApplication'
 	exclude ("*.jks")
 	exclude ("*.yml*")
-	exclude ("*.xml")
+	exclude ("*.pfx")
+	exclude ("*.bat")
 	exclude ("*.exe")
 }
 
